--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: CI
 
-
 on:
   push:
     branches: [ "main" ]
@@ -22,7 +21,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install pytest coverage ruff
+          pip install pytest coverage ruff requests
 
       - name: Lint (PEP8-ish)
         run: |
@@ -32,3 +31,7 @@ jobs:
         run: |
           coverage run --branch -m pytest
           coverage report --fail-under=100 -m
+
+      - name: API tests (expected to fail until server exists)
+        run: |
+          pytest -q tests_api
