Check new CI condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ "main", "server" ]
+    branches: [ "main", "server", "apispec" ]
   pull_request:
 
 jobs:
